k8s-services.yaml
#### PLANOS SERVICES
## DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planos
  labels:
    app: planos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planos
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: planos
    spec:
      containers:
        - name: planos
          image: us-central1-docker.pkg.dev/no-mono/app-nativas-uniandes/planos:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          imagePullPolicy: Always

## SERVICE - LOAD BALANCER
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-planos
spec:
  type: LoadBalancer
  selector:
    app: planos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
